# rover2

devel/: .catkin  local_setup.sh
devel/lib/depthimage_to_laserscan/: depthimage_to_laserscan
devel/lib/highlevel_controller/: highlevel_controller
devel/lib/pkgconfig/: bag_plot.pc  cv_bridge.pc  depthimage_to_laserscan.pc  ds4_driver.pc  highlevel_controller.pc  image_geometry.pc  opencv_tests.pc  plotjuggler.pc  qt_nav.pc  roverrobotics_description.pc  roverrobotics_driver.pc  roverrobotics_input_manager.pc  roverrobotics_simulation.pc  rplidar_ros.pc  smb_highlevel_controller.pc  vel_int.pc
devel/lib/roverrobotics_driver/: roverrobotics_driver_node
devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
devel/lib/smb_highlevel_controller/: smb_highlevel_controller
devel/lib/vel_int/: vel_int
src/highlevel_controller/: CMakeLists.txt  package.xml
src/highlevel_controller/launch/: highlevel_controller.launch
src/highlevel_controller/rosbag/: _2021-10-08-20-24-16.bag  _2021-10-09-18-08-57.bag  _2021-10-09-18-19-21.bag  _2021-10-09-18-35-23.bag  _2021-10-09-19-11-36.bag  _2021-10-09-19-16-32.bag  _2021-10-09-19-27-07.bag  _2021-10-09-19-51-20.bag  _2021-10-09-19-53-27.bag  _2021-10-09-19-58-12.bag  _2021-10-09-19-59-59.bag  _2021-10-09-20-02-40.bag  _2021-10-10-19-29-14.bag  _2021-11-17-15-46-06.bag  _2021-11-17-15-48-07.bag  _2021-11-17-15-49-53.bag  (+54 more)
src/qt_nav/: CMakeLists.txt
src/vel_int/: CMakeLists.txt  package.xml
src/vel_int/include/vel_int/: vel_int.hpp
src/vel_int/launch/: pos_calc.launch
src/vel_int/src/: vel_int.cpp  vel_int_node.cpp
(+31 files in other folders)
