<?xml version="1.0"?>
<package format="2">
  <name>vel_int</name>
  <version>0.1.0</version>
  <description>The vel_int package</description>
  <maintainer email="mspieler@ethz.ch">ros</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <!--exec_depend>smb_gazebo</exec_depend-->
</package>
